# Muffin

./: .gitignore  .readthedocs.yml  LICENSE  Makefile  README.md  atac_tcga.py  chip_immune.py  dependancies_test.sh  environment_muffin.yml  make.bat  pyproject.toml  requirements.txt  setup.py  test_chIP_from_bam.py  test_heatmap.py  test_scATAC.py  test_sc_rnaseq_interg.py  todo_list.txt
benchmarks/peakmerge/: density_peakmerge.py  gsea_stat.py  iterative_peakmerge.py  naive_merge.py
benchmarks/scrnaseq/: 10k_pbmc_scanpy_clusters.csv  10k_pbmc_sct_clusters.csv  10k_pbmc_seurat_clusters.csv  3k_pbmc_clustering_downsampling.ipynb  cluster_compare.ipynb  pbmc10k_tutorial.Rmd  scanpy_pbmc.ipynb  seurat_sct.rmd
conda_build/: meta.yaml
docs/: Using MUFFIN.rst  environment.yml  index.rst  muffin.rst
docs/_static/css/: custom.css
docs/examples/: 3k_pbmc_clustering.ipynb  scATAC_clustering.ipynb
muffin/: __init__.py  grea.py  great.py  load.py  peakMerge.py  plots.py  recipes.py  tools.py
muffin/utils/: FA_models.py  cluster.py  common.py  diff_expr.py  normalization.py  overlap_utils.py  plot_utils.py  stats.py  utils.py
settings/: paths.py  settings.py
source/: Using MUFFIN.rst  conf.py  index.rst
source/examples/: H3K4Me3_chip_immune.ipynb
superPackage/: __init__.py  grea.py  load.py  peakMerge.py  plots.py  tools.py
superPackage/utils/: FA_models.py  diff_expr.py  normalization.py  overlap_utils.py  stats.py  trendline.py  utils.py
